--- a/src/MinePlus/MainBundle/Resources/views/Security/login.html.twig
+++ b/src/MinePlus/MainBundle/Resources/views/Security/login.html.twig
@@ -2,24 +2,24 @@
 
 {% block title %}Login{% endblock %}
 
+{% block body_class %}login-body{% endblock %}
+
 {% block body %}
     {% if error %}
-        <div>{{ error.message }}</div>
+        <div class="login-error alert alert-error">{{ error.message }}</div>
     {% endif %}
 
-    <form action="{{ path('login_check') }}" method="post">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="_username" value="{{ last_username }}" />
+    <form action="{{ path('login_check') }}" method="post" class="login-form">
+        <div class="control-group">
+              <input type="text" name="_username" class="login-field" value="" placeholder="Enter your name" id="login-name" />
+              <label class="login-field-icon fui-user" for="login-name"></label>
+            </div>
 
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="_password" />
+            <div class="control-group">
+              <input type="password" name="_password" class="login-field" value="" placeholder="Password" id="login-pass" />
+              <label class="login-field-icon fui-lock" for="login-pass"></label>
+            </div>
 
-        {#
-            If you want to control the URL the user
-            is redirected to on success (more details below)
-            <input type="hidden" name="_target_path" value="/account" />
-        #}
-
-        <button type="submit">login</button>
+            <input type="submit" class="btn btn-primary btn-large btn-block" value="Login" />
     </form>
 {% endblock %}
