--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -16,6 +16,22 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body class="{% block body_class %}{% endblock %}">
-        {% block body %}{% endblock %}
+        {% block body %}
+            {% block navbar %}
+                <div class="navbar navbar-inverse">
+                    <div class="navbar-inner">
+                        <div class="container">
+                            <div class="nav-collapse collapse">
+                                <ul class="nav">
+                                    <li><a hreF="{{ path('dashboard') }}">Dashboard</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            {% endblock %}
+            {% block content %}
+            {% endblock %}
+        {% endblock %}
     </body>
 </html>
