--- a/src/MinePlus/MainBundle/Resources/views/Dashboard/index.html.twig
+++ b/src/MinePlus/MainBundle/Resources/views/Dashboard/index.html.twig
@@ -2,6 +2,6 @@
 
 {% block title %}MinePlusMainBundle:Dashboard:index{% endblock %}
 
-{% block body %}
+{% block content %}
 <h1>Welcome to the Dashboard:index page</h1>
 {% endblock %}
