--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -25,6 +25,20 @@
                                 <ul class="nav">
                                     <li><a hreF="{{ path('dashboard') }}">Dashboard</a></li>
                                 </ul>
+                                <ul class="nav pull-right">
+                                    {% if is_granted('ROLE_USER') %}
+                                        <li>
+                                            <a href="#fakelink">
+                                                {{ app.user.username }}
+                                            </a>
+                                            <ul>
+                                                <li><a href="{{ path('logout') }}">Logout</a></li>
+                                            </ul>
+                                        </li>
+                                    {% else %}
+                                        <li><a href="{{ path('login') }}">Login</a></li>
+                                    {% endif %}
+                                </ul>
                             </div>
                         </div>
                     </div>
