--- a/web/less/stylesheet.less
+++ b/web/less/stylesheet.less
@@ -31,6 +31,10 @@
     -webkit-border-radius: @radius;
 }
 
+.no-rounded-borders {
+    .border-radius(0);
+}
+
 .centered {
     margin: 0 auto;
 }
@@ -56,8 +60,4 @@
     .centered;
     margin-top: 20px;
     width: 350px;
-}
-
-.navbar-inner {
-    .border-radius(0);
 }
