--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -5,47 +5,51 @@
         <title>{% block title %}MinePlus{% endblock %}</title>
         {% block stylesheets %}
             <link rel="stylesheet" type="text/css" href="{{ asset('css/bootstrap.min.css') }}" />
-            <link rel="stylesheet" type="text/css" href="{{ asset('css/flat-ui.css') }}" />
-            <link rel="stylesheet/less" type="text/css" href="{{ asset('less/stylesheet.less') }}" />
         {% endblock %}
-        {% block javascripts %}
-            <script type="text/javascript" src="{{ asset('js/jquery.min.js') }}"></script>
-            <script type="text/javascript" src="{{ asset('js/bootstrap.min.js') }}"></script>
-            <script type="text/javascript" src="{{ asset('js/less.js') }}"></script>
-        {% endblock %}
-        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+        
+        {# For context-specific styles #}
+        <style type="text/css">
+            {% block styles %}
+            {% endblock %}
+        </style>
     </head>
     <body class="{% block body_class %}{% endblock %}">
         {% block body %}
             {% block navbar %}
-                <div class="navbar {% if config.navbar.inverse %}navbar-inverse{% endif %}">
-                    <div class="navbar-inner {% if config.navbar.rounded_borders == false%}no-rounded-borders{% endif %}">
-                        <div class="container">
-                            <div class="nav-collapse collapse">
-                                <ul class="nav">
-                                    <li><a hreF="{{ path('dashboard') }}">Dashboard</a></li>
+                <div class="navbar">
+                    <a class="navbar-brand" href="#">MinePlus</a>
+                    <ul class="nav navbar-nav">
+                        <li><a href="{{ path('dashboard') }}">Dashboard</a></li>
+                    </ul>
+                    {% if is_granted('ROLE_USER') %}
+                        <ul class="nav navbar-nav pull-right">
+                            <li class="dropdown">
+                                <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                                    {{ app.user.username }}
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="{{ path('logout') }}">Logout</a></li>
                                 </ul>
-                                <ul class="nav pull-right">
-                                    {% if is_granted('ROLE_USER') %}
-                                        <li>
-                                            <a href="#fakelink">
-                                                {{ app.user.username }}
-                                            </a>
-                                            <ul>
-                                                <li><a href="{{ path('logout') }}">Logout</a></li>
-                                            </ul>
-                                        </li>
-                                    {% else %}
-                                        <li><a href="{{ path('login') }}">Login</a></li>
-                                    {% endif %}
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
+                            </li>
+                        </ul>
+                    {% else %}
+                        <a class="btn navbar-btn btn-default pull-right" href="{{ path('login') }}">Login</a>
+                    {% endif %}
                 </div>
             {% endblock %}
-            {% block content %}
+            <div class="row">
+                <div class="col-lg-11 col-offset-1">
+                    {% block content %}
+                    {% endblock %}
+                </div>
+            </div>
+            {% block footer %}
+                {# TODO: that's for the future ;) #}
             {% endblock %}
+        {% endblock %}
+        {% block javascripts %}
+            <script type="text/javascript" src="{{ asset('js/jquery.min.js') }}"></script>
+            <script type="text/javascript" src="{{ asset('js/bootstrap.min.js') }}"></script>
         {% endblock %}
     </body>
 </html>
