--- a/src/MinePlus/MainBundle/Resources/views/Security/login.html.twig
+++ b/src/MinePlus/MainBundle/Resources/views/Security/login.html.twig
@@ -25,12 +25,9 @@
                         <label for="input-password">Password</label>
                         <input type="password" name="_password" class="form-control" id="input-password" placeholder="Password" />
                     </div>
-                    
-                    {#
-                    There is a bug when pulling the button to the right, which
-                    looks better IMO, so we don't do it right now.
-                    #}
-                    <button type="submit" class="btn btn-default">Submit</button>
+                    <button type="submit" class="btn btn-default pull-right">Submit</button>
+                    {# TODO: I think we'll be able to find a better solution!#}
+                    <div class="clearfix"></div>
                 </form>
             </div>
         </div>
