--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -25,6 +25,9 @@
                         <ul class="nav navbar-nav pull-right">
                             <li class="dropdown">
                                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                                    {% if config.navbar.avatar.show %}
+                                        <img src="{{ app.user.getAvatarUrl(config.navbar.avatar.size) }}" />
+                                    {% endif %}
                                     {{ app.user.username }}
                                 </a>
                                 <ul class="dropdown-menu">
