--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -19,7 +19,13 @@
                 <div class="navbar">
                     <a class="navbar-brand" href="#">MinePlus</a>
                     <ul class="nav navbar-nav">
-                        <li><a href="{{ path('dashboard') }}">Dashboard</a></li>
+                        {# 
+                            TODO: normally this should only be used for debugging,
+                            we'll find a better/safer checking mechanism!
+                        #}
+                        <li{% if app.request.get('_route') == 'dashboard' %} class="active"{% endif %}>
+                            <a href="{{ path('dashboard') }}">Dashboard</a>
+                        </li>
                     </ul>
                     {% if is_granted('ROLE_USER') %}
                         <ul class="nav navbar-nav pull-right">
@@ -31,7 +37,9 @@
                                     {{ app.user.username }}
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="{{ path('logout') }}">Logout</a></li>
+                                    <li>
+                                        <a href="{{ path('logout') }}">Logout</a>
+                                    </li>
                                 </ul>
                             </li>
                         </ul>
