--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -43,6 +43,7 @@
                                 </ul>
                             </li>
                         </ul>
+                        <a class="btn navbar-btn btn-primary pull-right" data-toggle="modal" href="#chat-modal">Chat</a>
                     {% else %}
                         <a class="btn navbar-btn btn-default pull-right" href="{{ path('login') }}">Login</a>
                     {% endif %}
@@ -54,6 +55,20 @@
                     {% endblock %}
                 </div>
             </div>
+            {% block chat %}
+                <div class="modal fade" id="chat-modal">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                                <h4 class="modal-title">Chat</h4>
+                            </div>
+                            <div class="modal-body chat-log">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            {% endblock %}
             {% block footer %}
                 {# TODO: that's for the future ;) #}
             {% endblock %}
