--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -16,7 +16,8 @@
                 <div class="panel-heading">
                         <h3 class="panel-title">Login{% if error %} <small>Please try again</small>{% endif %}</h3>
                 </div>
-                <form action="{{ path('login_check') }}" method="post">
+                <form action="{{ path('fos_user_security_check') }}" method="post">
+                    <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
                     <div class="form-group">
                         <label for="input-username">Username</label>
                         <input type="text" name="_username" class="form-control" id="input-username" placeholder="Enter username" value="{{ last_username }}" />
@@ -25,7 +26,12 @@
                         <label for="input-password">Password</label>
                         <input type="password" name="_password" class="form-control" id="input-password" placeholder="Password" />
                     </div>
-                    <button type="submit" class="btn btn-default pull-right">Submit</button>
+                    <div class="checkbox pull-left">
+                        <label>
+                            <input type="checkbox" name="_remember_me">Remember me</input>
+                        </label>
+                    </div>
+                    <button type="submit" name="_submit" class="btn btn-default pull-right">Submit</button>
                     {# TODO: I think we'll be able to find a better solution!#}
                     <div class="clearfix"></div>
                 </form>
