--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -38,13 +38,13 @@
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li>
-                                        <a href="{{ path('logout') }}">Logout</a>
+                                        <a href="{{ path('fos_user_security_logout') }}">Logout</a>
                                     </li>
                                 </ul>
                             </li>
                         </ul>
                     {% else %}
-                        <a class="btn navbar-btn btn-default pull-right" href="{{ path('login') }}">Login</a>
+                        <a class="btn navbar-btn btn-default pull-right" href="{{ path('fos_user_security_login') }}">Login</a>
                     {% endif %}
                 </div>
             {% endblock %}
