Render minecraft avatar's by ourself, instead of letting minotar.net do it.
That's great for privacy, because mintar.net uses Google Analytics and I'm a bit paranoid ;) .
Every avatar is first loaded from the original minecraft skin server (which become's converted to the head), and then cached by username and size for the next requests.
I also included a custom twig extension, which makes it much easier to get an avatar url/tag.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -32,7 +32,7 @@
                             <li class="dropdown">
                                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                                     {% if config.navbar.avatar.show %}
-                                        <img src="{{ app.user.getAvatarUrl(config.navbar.avatar.size) }}" />
+                                        {{ avatar(app.user.username, config.navbar.avatar.size)|raw }}
                                     {% endif %}
                                     {{ app.user.username }}
                                 </a>
