--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -45,14 +45,14 @@
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li>
-                                        <a href="{{ path('fos_user_security_logout') }}">Logout</a>
+                                        <a href="{{ path('fos_user_security_logout') }}">{{ 'navbar.logout'|trans }}</a>
                                     </li>
                                 </ul>
                             </li>
                         </ul>
-                        <a class="btn navbar-btn btn-primary pull-right disabled chat-indicator" data-toggle="modal" href="#chat-modal">Chat</a>
+                        <a class="btn navbar-btn btn-primary pull-right disabled chat-indicator" data-toggle="modal" href="#chat-modal">{{ 'chat.open'|trans }}</a>
                     {% else %}
-                        <a class="btn navbar-btn btn-default pull-right" href="{{ path('fos_user_security_login') }}">Login</a>
+                        <a class="btn navbar-btn btn-default pull-right" href="{{ path('fos_user_security_login') }}">{{ 'navbar.login'|trans }}</a>
                     {% endif %}
                 </div>
             {% endblock %}
@@ -68,7 +68,7 @@
                         <div class="modal-content">
                             <div class="modal-header">
                                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                                <h4 class="modal-title">Chat</h4>
+                                <h4 class="modal-title">{{ 'chat.title'|trans }}</h4>
                             </div>
                             <div class="modal-body">
                                 <div class="chat-log">
@@ -78,7 +78,7 @@
                                         <textarea class="form-control" rows="2" id="chat-textarea"></textarea>
                                     </div>
                                     <div class="col-lg-2">
-                                        <a class="btn btn-default disabled" id="chat-send">Send</a>
+                                        <a class="btn btn-default disabled" id="chat-send">{{ 'chat.send'|trans }}</a>
                                     </div>
                                 </div>
                             </div>
