--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -19,6 +19,10 @@
                 .chat-input {
                     padding: 10px;
                 }
+                .max-size {
+                    max-width: 100%;
+                    max-height: 100%;
+                }
             {% endblock %}
         </style>
     </head>
@@ -59,7 +63,7 @@
                 </div>
             {% endblock %}
             <div class="row">
-                <div class="col-lg-11 col-offset-1">
+                <div class="col-lg-10 col-offset-1">
                     {% block content %}
                     {% endblock %}
                 </div>
