--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -22,6 +22,8 @@
                 .max-size {
                     max-width: 100%;
                     max-height: 100%;
+                    width: 100%;
+                    height: 100%;
                 }
             {% endblock %}
         </style>
