Display profile when clicking on user in list.

--- a/src/MinePlus/MainBundle/Resources/views/Player/list.html.twig
+++ b/src/MinePlus/MainBundle/Resources/views/Player/list.html.twig
@@ -8,7 +8,7 @@
             <div class="row" style="margin-top: 10px;">
         {% endif %}
         
-        <a href="#">
+        <a href="{{ path('mineplus_main_profile_show', { 'username': user.username }) }}">
             <div class="col-lg-1">
                 <img src="{{ avatar(user.username, 64, false) }}" class="max-size" />
             </div>
