--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -25,6 +25,9 @@
                     width: 100%;
                     height: 100%;
                 }
+                .margin-top-little {
+                    margin-top: 10px;
+                }
             {% endblock %}
         </style>
     </head>
