--- a/src/MinePlus/MainBundle/Resources/views/Player/show.html.twig
+++ b/src/MinePlus/MainBundle/Resources/views/Player/show.html.twig
@@ -3,5 +3,13 @@
 {% block title %}{{ user.username }}{% endblock %}
 
 {% block content %}
-    {{ user.username }}
+    <div class="row">
+        <div class="col-lg-3">
+            {{ avatar(user.username, 128)|raw }}
+            <div class="panel margin-top-little">
+            </div>
+        </div>
+        <div class="col-lg-9">
+        </div>
+    </div>
 {% endblock %}
