--- a/src/MinePlus/MainBundle/Resources/views/Player/list.html.twig
+++ b/src/MinePlus/MainBundle/Resources/views/Player/list.html.twig
@@ -9,7 +9,7 @@
         {% endif %}
         
         <a href="{{ path('mineplus_main_profile_show', { 'username': user.username }) }}">
-            <div class="col-lg-1">
+            <div class="col-md-1">
                 <img src="{{ avatar(user.username, 64, false) }}" class="max-size" />
             </div>
         </a>
