--- a/src/MinePlus/MainBundle/Resources/views/Player/show.html.twig
+++ b/src/MinePlus/MainBundle/Resources/views/Player/show.html.twig
@@ -4,12 +4,12 @@
 
 {% block content %}
     <div class="row">
-        <div class="col-lg-3">
+        <div class="col-md-3">
             {{ avatar(user.username, 128)|raw }}
             <div class="panel margin-top-little">
             </div>
         </div>
-        <div class="col-lg-9">
+        <div class="col-md-9">
         </div>
     </div>
 {% endblock %}
