--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -10,8 +10,9 @@
 {% endblock %}
 
 {% block body %}
-    <div class="row">
-        <div class="col-md-4 col-md-offset-4">
+    <div class="row container">
+        {# Optimize row width, this one is not pretty #}
+        <div class="col-md-4 col-md-offset-5">
             <div class="login-panel panel {% if error %}panel-danger{% else %}panel-default{% endif %}">
                 <div class="panel-heading">
                         <h3 class="panel-title">
