--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -39,7 +39,7 @@
             {% block navbar %}
                 {% include '::navbar.html.twig' %}
             {% endblock %}
-            <div class="row">
+            <div class="row container">
                 <div class="col-md-10 col-md-offset-1">
                     {% block content %}
                     {% endblock %}
