--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -33,7 +33,10 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li>
-                            <a href="{{ path('fos_user_security_logout') }}">{{ 'logout'|trans }}</a>
+                            <a href="{{ path('fos_user_security_logout') }}">
+                                {{ macro.icon('log-out') }}
+                                {{ 'logout'|trans }}
+                            </a>
                         </li>
                     </ul>
                 </li>
